<resources>
    <string name="app_name">DISD FCNS</string>
    <string name="org_name">DISD Food &amp; Child Nutrition Services</string>
    <string name="org_address">1515 Al Lipscomb Way, Dallas, TX 75215</string>
    <string name="org_phone">214&#8211;932&#8211;5500</string>
    <string name="org_slogan1">Our goal</string>
    <string name="org_slogan2">is to provide nutrition to students that fuels successful learning. </string>
    <string name="org_description">
        We provide approximately 125,000 lunch meals, 98,000 breakfast meals and 10,000 after
        school meals daily at over 219 school sites. In addition, during the summer we provide
        approximately 300,000 summer meals at Dallas ISD schools and other non-school sites.
        FCNS is totally self-sufficient.\n\n
        Food and Child Nutrition Services (FCNS) has its own warehouse operation that distributes 28,000
        cases per week, a production kitchen that distributes 36,000 meals a week to satellite
        schools and technology services that manages over 800 computers.\n\n
        We have an agreement with the Texas Department of Agriculture (TDA) to operate the Child Nutrition
        Programs as outlined in federal and state regulations. Our current year budget is $117 million.
    </string>
    <string name="org_parent_description">The Dallas Independent School District is a school district
    based in Dallas, Texas. Dallas ISD, which operates schools in much of Dallas County, is the second 
    largest school district in Texas and the twelfth largest in the United States.
    </string>
    <!--Content Descriptions-->
    <string name="content_description_disd_logo">The Dallas Independent School District logo</string>
    <string name="content_description_maria_luna">The Food and Child Nutrition Services building,
    also known as Maria Luna.</string>
    <string name="content_description_icon_location">A marker icon shown next to the address</string>
    <string name="content_description_icon_phone">A telephone shown next to the phone number</string>
</resources>
